<resources>
    <string name="app_name" translatable="false">Robux Earny</string>
    <string name="api_url" translatable="false">https://robuxrush.com/resources/</string>
    <string name="appsprize_token" translatable="false">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJidW5kbGVfaWQiOiJjb20ucm9idXhlYXJueS5vZmZpY2lhbCIsImlkIjo1NzAsInVzZXJfaWQiOjUxM30.3O49oVFgb4D7T4gh7r5buGCvBW_D0Ro-Goi_mWRyxRY</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_desc">\nWelcome to RobuxEarny! An application where you can earn Robux effortlessly!\nYou just need to play some very simple mini games, It\'s completely free and you will be able to redeem your robux by accumulating your coins!\n</string>
    <string name="coinsystem">Coin System</string>
    <string name="ready">Are you ready?</string>
    <string name="current_points">Current Coins: %d</string>
    <string name="done">Done!</string>
    <string name="load">Loading startup ad in %d seconds</string>
    <string name="splash_activity_image_text" translatable="false">Splash Activity Image</string>
    <string name="splash_activity_text" translatable="false">RobuxEarny</string>
    <string name="redeem_robux">Redeem Robux</string>
    <string name="start">Start</string>
    <string name="ticket_finish">Please finish your current ticket first.</string>
    <string name="play">Play</string>
    <string name="x" translatable="false">"?"</string>
    <string name="total_points">Total coins: %d</string>
    <string name="new_ticket">New ticket</string>
    <string name="web_client_id" translatable="false">1085849240516-4r0330jokf9873h6jtccud2b26mnhdni.apps.googleusercontent.com</string>
    <string name="earn_robux">Earn lot of coins and redeem Robux!</string>
    <string name="start_earning">Start earning</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="settings">Settings</string>
    <string name="description">The best and fastest app for earning Robux</string>
    <string name="coinsystem_desc">\nThis app has a special coin system with six packages.\nEach package comes with a different amount of coins that corresponds to a different amount of Robux. By playing our mini-games, you can earn coins. The more coins you earn, the more packages you can redeem. This means you\'ll have more chances to earn Robux! It\'s a simple way to earn Robux and have fun along the way!\n</string>
    <string name="ready_desc">"\nWhen you are ready press the start button below and start right now to earn a lot of Robux!\nIn order to send you the Robux don't forget to click on the ads as much as you can.\nThis app is still in beta but in the future we will add much more games!\n"</string>
    <string name="winning_numbers">Winning numbers: %s</string>
    <string name="delivery">Delivery: 2–7 days</string>
    <string name="basic_package" translatable="false">Basic Package</string>
    <string name="deluxe_package" translatable="false">Deluxe Package</string>
    <string name="premium_package" translatable="false">Premium Package</string>
    <string name="price">Price: %d Coins</string>
    <string name="price2">Price: %s</string>
    <string name="not_enough">You don\'t have enough coins :(</string>
    <string name="redeem_amount" translatable="false">Robux: %d Robux</string>
    <string name="redeem">Redeem</string>
    <string name="guide">Follow this guide for redeeming your Robux:\n\n1) Log in to Roblox: Use your Roblox username and password to log in.\n\n2) Go to "Create": Click on "Create" button on the top.\n\n3) Open Your Game: Select a game for adding a gamepass.\n\n4) Add a Gamepass: Click on "Associated Items," choose "Passes," and add your Gamepass.\n\n5) Customize Your Gamepass: Give it a name and description.\n\n6) Set the Price: Set the price to %d Robux.\n\n7) Save It: Save it, click on the … button and copy the link.\n\n8) 5 star review: Please leave us a 5 star review on Google Play!\n\n9) Paste the link: Paste the link below and you are ready to go.</string>
    <string name="gamepass_url">Paste your gamepass url here</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_desc">Is the Gamepass URL correct and do you want to confirm?</string>
    <string name="confirm_desc2">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="request">Request sent! You will receive your Robux soon.</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_your_robuxearny_account">Delete your RobuxEarny account</string>
    <string name="about">About</string>
    <string name="github_repository">GitHub repository</string>
    <string name="repository" translatable="false">fakeexception/RobuxEarny</string>
    <string name="discord_server">Discord server</string>
    <string name="discord_desc">Join our Robux earning Discord server</string>
    <string name="mail" translatable="false">info@robuxrush.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="connect_internet">Please connect to the internet to use this app.</string>
    <string name="rooted_device">Rooted Device</string>
    <string name="root_desc">You are not allowed to use this app on rooted devices.</string>
    <string name="account_deleted">Account successfully deleted.</string>
    <string name="logout_from_your_account">Logout from your account</string>
    <string name="logout">Logout</string>
    <string name="spin" translatable="false">SPIN</string>
    <string name="share">Share your code</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="login_success">Login Success!</string>
    <string name="ref_desc">Earn 600 coins every time somebody uses your referral code!</string>
    <string name="login_error">Login error, please try again</string>
    <string name="robuxearny_referral_code">RobuxEarny Referral Code</string>
    <string name="robuxearny_referral_desc">"This is my RobuxEarny's referral code: %s, download the app from Google Play and get a coin bonus!"</string>
    <string name="share_referral_code">Share Referral Code</string>
    <string name="you_win">Congratulations! You win!</string>
    <string name="faq">FAQ</string>
    <string name="see_our_faq">See our FAQ</string>
    <string name="qst1">Q: Will i receive my Robux?</string>
    <string name="qst_desc1">A: Yes, you will receive your Robux as long as you watch the ads.</string>
    <string name="qst2">Q: Why my coins are not being saved?</string>
    <string name="qst_desc2">A: Your coins will be saved only after you finish watching an ad video.</string>
    <string name="qst3">Q: When are the Robux sent?</string>
    <string name="qst_desc3">A: The Robux will be sent to you normally in 1–2 days, but there may be variations.</string>
    <string name="qst4">Q: How can I contact you?</string>
    <string name="qst_desc4">A: Compile the contact form on our website https://robuxrush.com</string>
    <string name="the_referral_code_is_not_valid">The referral code is not valid</string>
    <string name="feedback">Feedback</string>
    <string name="send_us_a_feedback">Send us a feedback</string>
    <string name="feedback_desc">Enter your feedback here, max 512 chars</string>
    <string name="feedback_sent">Feedback submitted successfully!</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="no">No</string>
    <string name="congratulations_you_won_a_20_points_bonus">Congratulations! You won a 15 points bonus!</string>
    <string name="ref_code">Do you have a referral code?</string>
    <string name="refcode_desc">If you have a referral code write it here for receiving a bonus!</string>
    <string name="i_don_t_have_a_code">I don\'t have a code</string>
    <string name="saved">Coins saved!</string>
    <string name="survey_desc">Complete surveys and the coins earned will be added to your Robux Earny account!</string>
    <string name="earn_faster">Earn More</string>
    <string name="current_coins">Current Coins: %d</string>
    <string name="invalid_link">Please enter a valid link.</string>
    <string name="ad_load_fail">The ad failed to load, please press the button again.</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="boosters">Boosters</string>
    <string name="user_info">User Info</string>
    <string name="buy">Buy</string>
    <string name="boost">Booster successfully purchased!</string>
    <string name="five_star_review">Leave a 5 star review!</string>
    <string name="logo">Logo</string>
    <string name="close">Close</string>
    <string name="review">Review</string>
    <string name="review_message">To enhance our app and reward your support, please rate us 5 stars on the Play Store! After you submit your review, send a screenshot of your 5-star rating to info@robuxrush.com, and you\'ll receive 600 coins as a thank-you for your feedback. Your input is invaluable in helping us improve!</string>
    <string name="save_coins_title">Save your coins</string>
    <string name="save_coins_desc">You have to watch an ad video for saving your coins, press continue to watch the video.</string>
    <string name="save_coins_continue">Continue</string>
    <string name="coins">Coins</string>
    <string name="try_again">Try Again</string>
    <string name="spin_win">Congratulations! You won %s!</string>
    <string name="try_again_message">Try again next time!</string>
    <string name="daily_wheel">Daily rewards wheel</string>
    <string name="spin_the_wheel">Spin The Wheel</string>
    <string name="daily_wheel_once_per_day">You can only open the daily wheel once per day!</string>
    <string name="redeem_title">Robux Redeem</string>
    <string name="redeem_desc">You have successfully redeemed your Robux! 🎉 Please leave us a 5 star review! 🌟</string>
    <string name="offerwall_logo" translatable="false">Offerwall Logo</string>
    <string name="offerwalls" translatable="false">Offerwalls</string>
    <string name="user_info_title">Please answer the following questions to continue</string>
    <string name="user_info_age">Select your age:</string>
    <string name="user_info_gender">Select your gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="please_select_an_offerwall">Please select an offerwall</string>
    <string name="allow_usage_access">Allow Usage Access</string>
    <string name="usage_desc">For the best experience, please grant Robux Earny usage access permission!</string>
    <string name="allow">Allow</string>
    <string name="earned_coins">Earned Coins</string>
    <string name="attempts_remaining">Attempts Remaining: %1$d</string>
    <string name="game_over">Game Over! No more attempts left.</string>
    <string name="match_found">Match found!</string>
    <string name="no_match_found">No match, try again!</string>
</resources>