<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_sv_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="42dp"
                android:text="@string/redeem_robux"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textSize="40sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp"
            app:contentPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide"
                android:textSize="15sp" />

        </com.google.android.material.card.MaterialCardView>


        <!-- New LinearLayout to hold EditText and Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp">

            <EditText
                android:id="@+id/gamepass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="url"
                android:hint="@string/gamepass_url"
                android:inputType="textUri"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/redeem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:icon="@drawable/robux"
                android:onClick="purchase"
                android:text="@string/redeem" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>